# clsp

./: README.md  alignment_debug.pth  conda.yml  pyproject.toml
clsp/: __init__.py  train.py
clsp/data/: processing.py
clsp/models/: __init__.py  clsp.py  transformer.py
clsp/training/: data.py  process.py  scheduler.py  train.py
clsp/utils/: alignment.py  speech.py  storage.py  text.py
tests/functional_tests/data/: test_processing.py
tests/unit_tests/models/: test_clsp.py
